<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <GVL Name="TcpIpClientConstants" Id="{3ea1a60d-09c5-4cac-9b1e-b56594253d63}">
    <Declaration><![CDATA[VAR_GLOBAL CONSTANT
	PLCPRJ_RECONNECT_TIME						      : TIME := T#10MS; //连接开关延时时间;
	PLCPRJ_SEND_CYCLE_TIME						    : TIME := T#1S;
(*	PLCPRJ_ACCEPT_POLLING_TIME					: TIME := T#1s;  not used at client side *)

	PLCPRJ_RECEIVE_POLLING_TIME		 			  : TIME := T#1S;
	PLCPRJ_RECEIVE_TIMEOUT						    : TIME := T#5S;
	
	(*	MAX_CLIENT_CONNECTIONS						  : UDINT(1..20) := 5; not used at client side *)
	MAX_PLCPRJ_RXBUFFER_SIZE					    : UDINT := 300;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>